--- a/git-gerrit.in
+++ b/git-gerrit.in
@@ -347,7 +347,7 @@ get_patches() { # get_patches <patches>
 }
 
 review_patches() { # review_patches <action> <patches>
-    action="$1"
+    local action="$1"
     shift
     case "$action" in
         -*|0|+*)
@@ -361,6 +361,9 @@ review_patches() { # review_patches <action> <patches>
         retest)
             msg="Set patch #%s to Retest+1"
             action="--retest +1"
+        ;;
+        *)
+            die "$action is not a valid action" $err_review_failed
         ;;
     esac
     for patch in "$@";do
