--- a/git-gerrit.in
+++ b/git-gerrit.in
@@ -1,7 +1,7 @@
 #!/bin/bash
 # git-gerrit - list, download, and review gerrit patches - version @@VERSION@@
 #
-# Copyright (c) 2015 Kylie McClain <somasis@exherbo.org>
+# Copyright (c) 2015-2016 Kylie McClain <somasis@exherbo.org>
 #
 # Permission to use, copy, modify, and/or distribute this software for any
 # purpose with or without fee is hereby granted, provided that the above
